src/objects/Product_FIM__c.object
<CustomObject>
    <description>FIT Project</description>
    <fields>
        <fullName>Is_Active__c</fullName>
        <label>Is Active</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_Office_Text__c</fullName>
        <label>Lab Office Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_Office__c</fullName>
        <label>Lab Office</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Material_Group__c</fullName>
        <label>Material Group</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Type__c</fullName>
        <label>Material Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH1_Description__c</fullName>
        <label>PH1 Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PH1__c</fullName>
        <label>PH1 #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH2_Description__c</fullName>
        <label>PH2 Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PH2__c</fullName>
        <label>PH2 #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH3_Description__c</fullName>
        <label>PH3 Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PH3__c</fullName>
        <label>PH3 #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Unit__c</fullName>
        <label>Package Unit</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Model Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Key__c</fullName>
        <externalId>true</externalId>
        <label>Product Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serialized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Serialized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USD_Accounting_Group__c</fullName>
        <label>USD Accounting Group</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Executive_Detail__c</fullName>
        <label>USD Executive Detail</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Forecast_Level_2__c</fullName>
        <label>USD Forecast Level 2</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Manager_Detail__c</fullName>
        <label>USD Manager Detail</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Product_Category__c</fullName>
        <label>USD Product Category</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Product_Family__c</fullName>
        <label>USD Product Family</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Product_Group_Name__c</fullName>
        <label>USD Product Group Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Product_Sub_Division__c</fullName>
        <label>USD Product Sub-Division</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Product_Type__c</fullName>
        <label>USD Product Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Selling_Division__c</fullName>
        <label>USD Selling Division</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All_Products</fullName>
        <columns>NAME</columns>
        <columns>Product_Key__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Material_Type__c</columns>
        <columns>PH1_Description__c</columns>
        <columns>PH2__c</columns>
        <columns>PH2_Description__c</columns>
        <columns>PH3__c</columns>
        <columns>PH3_Description__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <nameField>
        <label>Model #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>